# master-thesis

./: .clang-format  .clang-tidy  .envrc  .flake8  .gitignore  .gitmodules  .project.gf  CMakeLists.txt  LICENSE  README.md  TODO.md  cptp.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
VRPSolver/: .gitignore  README.md  bake_cplex1210_in_docker_img.sh  deploy_bapcod.sh  native-julia-env.sh
VRPSolver/deprecated-scripts/: bake_docker_img.sh
VRPSolver/logs and stuff/: breakpoints.txt  debug-log-notes.txt
cmake/: FindCPLEX.cmake
data/: .gitignore
data/BAP_Instances_Test/A-n37-k5/: A-n37-k5-c248.json  A-n37-k5-c248.vrp  A-n37-k5-c249.json  A-n37-k5-c249.vrp  A-n37-k5-c250.json  A-n37-k5-c250.vrp
data/BAP_Instances_Test/A-n44-k6/: A-n44-k6-c250.json  A-n44-k6-c250.vrp  A-n44-k6-c251.json  A-n44-k6-c251.vrp  A-n44-k6-c252.json  A-n44-k6-c252.vrp
data/BAP_Instances_Test/E-n51-k5/: E-n51-k5-c315.json  E-n51-k5-c315.vrp  E-n51-k5-c316.json  E-n51-k5-c316.vrp  E-n51-k5-c317.json
data/BAP_Instances_Test/F-n45-k4/: F-n45-k4-c420.json  F-n45-k4-c420.vrp  F-n45-k4-c421.json  F-n45-k4-c421.vrp  F-n45-k4-c422.json  F-n45-k4-c422.vrp
data/BaPCod generated - Test instances/: A-n37-k5.cgit-0.info.json  A-n37-k5.cgit-0.vrp  A-n37-k5.cgit-1.info.json  A-n37-k5.cgit-1.vrp  A-n37-k5.cgit-10.info.json  A-n37-k5.cgit-10.vrp  A-n37-k5.cgit-11.info.json  A-n37-k5.cgit-11.vrp  A-n37-k5.cgit-12.info.json  A-n37-k5.cgit-12.vrp  A-n37-k5.cgit-13.info.json  A-n37-k5.cgit-13.vrp  A-n37-k5.cgit-14.info.json  A-n37-k5.cgit-14.vrp  A-n37-k5.cgit-15.info.json  A-n37-k5.cgit-15.vrp  A-n37-k5.cgit-16.info.json  A-n37-k5.cgit-16.vrp  A-n37-k5.cgit-17.info.json  A-n37-k5.cgit-17.vrp  A-n37-k5.cgit-18.info.json  A-n37-k5.cgit-18.vrp  A-n37-k5.cgit-19.info.json  A-n37-k5.cgit-19.vrp  A-n37-k5.cgit-2.info.json  A-n37-k5.cgit-2.vrp  A-n37-k5.cgit-20.info.json  A-n37-k5.cgit-20.vrp  A-n37-k5.cgit-21.info.json  A-n37-k5.cgit-21.vrp  A-n37-k5.cgit-22.info.json  A-n37-k5.cgit-22.vrp  A-n37-k5.cgit-23.info.json  A-n37-k5.cgit-23.vrp  A-n37-k5.cgit-24.info.json  A-n37-k5.cgit-24.vrp  A-n37-k5.cgit-25.info.json  A-n37-k5.cgit-25.vrp  A-n37-k5.cgit-26.info.json  A-n37-k5.cgit-26.vrp  (+90 more)
data/BaPCod generated - Test instances/A-n37-k5/: A-n37-k5.cgit-0.info.json  A-n37-k5.cgit-0.vrp  A-n37-k5.cgit-1.info.json  A-n37-k5.cgit-1.vrp  A-n37-k5.cgit-10.info.json  A-n37-k5.cgit-10.vrp  A-n37-k5.cgit-100.info.json  A-n37-k5.cgit-100.vrp  A-n37-k5.cgit-101.info.json  A-n37-k5.cgit-101.vrp  A-n37-k5.cgit-102.info.json  A-n37-k5.cgit-102.vrp  A-n37-k5.cgit-103.info.json  A-n37-k5.cgit-103.vrp  A-n37-k5.cgit-104.info.json  A-n37-k5.cgit-104.vrp  A-n37-k5.cgit-105.info.json  A-n37-k5.cgit-105.vrp  A-n37-k5.cgit-106.info.json  A-n37-k5.cgit-106.vrp  A-n37-k5.cgit-107.info.json  A-n37-k5.cgit-107.vrp  A-n37-k5.cgit-108.info.json  A-n37-k5.cgit-108.vrp  A-n37-k5.cgit-109.info.json  A-n37-k5.cgit-109.vrp  A-n37-k5.cgit-11.info.json  A-n37-k5.cgit-11.vrp  A-n37-k5.cgit-110.info.json  A-n37-k5.cgit-110.vrp  A-n37-k5.cgit-111.info.json  A-n37-k5.cgit-111.vrp  A-n37-k5.cgit-112.info.json  A-n37-k5.cgit-112.vrp  A-n37-k5.cgit-113.info.json  A-n37-k5.cgit-113.vrp  A-n37-k5.cgit-114.info.json  A-n37-k5.cgit-114.vrp  A-n37-k5.cgit-115.info.json  A-n37-k5.cgit-115.vrp  (+458 more)
data/BaPCod generated - Test instances/F-n45-k4/: F-n45-k4.cgit-0.info.json  F-n45-k4.cgit-0.vrp  F-n45-k4.cgit-1.vrp  F-n45-k4.cgit-10.info.json  F-n45-k4.cgit-10.vrp  F-n45-k4.cgit-100.info.json  F-n45-k4.cgit-100.vrp  F-n45-k4.cgit-101.info.json  F-n45-k4.cgit-101.vrp  F-n45-k4.cgit-102.info.json  F-n45-k4.cgit-102.vrp  (+1327 more)
data/BaPCod generated - Test instances/F-n45-k4-first-10/: F-n45-k4.cgit-1.info.json  F-n45-k4.cgit-2.vrp  F-n45-k4.cgit-3.vrp  F-n45-k4.cgit-5.info.json  F-n45-k4.cgit-7.info.json  F-n45-k4.cgit-7.vrp  F-n45-k4.cgit-8.info.json  F-n45-k4.cgit-8.vrp  F-n45-k4.cgit-9.vrp
data/BaPCod generated - Test instances/F-n45-k4-last-10/: F-n45-k4.cgit-668.info.json  F-n45-k4.cgit-668.vrp  F-n45-k4.cgit-669.info.json  F-n45-k4.cgit-672.info.json  F-n45-k4.cgit-673.info.json  F-n45-k4.cgit-673.vrp  F-n45-k4.cgit-674.info.json  F-n45-k4.cgit-674.vrp  F-n45-k4.cgit-677.vrp
data/CVRP/: toy.vrp
data/ESPPRC - Test Instances/: E-n76-k7_b.vrp  E-n76-k8_a.vrp  E-n76-k8_b.vrp  F-n45-k4_a.vrp  M-n121-k7_b.vrp  M-n151-k12_a.vrp  M-n151-k12_b.vrp  M-n200-k16_a.vrp  M-n200-k17_a.vrp  P-n101-k4_b.vrp  P-n76-k4_b.vrp
perfprof/: main.ts  package.json  tsconfig.json
res/: my.vrp
res/ESPPRC - Test Instances/: E-n101-k14_a.vrp  E-n101-k14_b.vrp  E-n101-k8_a.vrp  E-n101-k8_b.vrp  E-n76-k10_a.vrp  E-n76-k10_b.vrp  E-n76-k14_a.vrp  E-n76-k14_b.vrp  M-n200-k16_b.vrp  M-n200-k17_b.vrp  P-n70-k10_a.vrp  P-n70-k10_b.vrp  P-n76-k4_a.vrp  P-n76-k5_a.vrp  P-n76-k5_b.vrp
scripts/: inflate-cvrp-instances.sh
src/: CMakeLists.txt  core-constants.h  core-utils.h  core.c  core.h  duality.c  duality.h  main.c  maxflow.c  maxflow.h  misc.h  network.c  network.h  os.c  os.h  parser.c  parser.h  parsing-utils.c  parsing-utils.h  render.c  render.h  solvers.h  timing.c  timing.h  types.c  types.h  utils.h  validation.c  validation.h  version.c.in  version.h  visualization.c  visualization.h
src/maxflow/: push-relabel.c  push-relabel.h  utils.h
src/solvers/: mip.c  mip.h  stub.c  stub.h
src/solvers/mip/: analyze-and-optimize.c  analyze-and-optimize.h  cuts.h  mip.c  mip.h  warm-start.c  warm-start.h
src/solvers/mip/cuts/: cuts-utils.h  glm.c  gsec.c  rci.c
src/solvers/stub/: stub.c
src/tools/: CMakeLists.txt  cvrp-instance-modifier.c  simplified-instance-converter.c  test-instance-converter.c
src/tools/perfprof/: CMakeLists.txt  README.md  common.h  hashing.c  hashing.h  json-loader.c  json-loader.h  main.c  output.c  output.h  perfprof.py  plot.py  proc.c  proc.h
tests/: CMakeLists.txt  core.c  instances.h  mip.c  misc.c  parser.c  parsing-utils.c  simple.c  test-core.c  test-gomory-hu-tree.c  test-gomory-hu-tree2.c  test-max-flow.c  test-maxflow.c  test-mip.c  test-misc.c  test-network-flow.c  test-parser.c  test-parsing-utils.c  test-vrplib-parser.c  vrplib-parser.c
(+87 files in other folders)
